--- a/aniversario_punch.html
+++ b/aniversario_punch.html
@@ -1,9 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-<!doctype html>
-<html class="no-js" lang="">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -146,49 +143,56 @@
         </div>
     </header>
     <main class="a-project green-element aniversario_punch fade-in">
-        <div class="container-fluid">
+        <div class="container-fluid content-viewport">
             <div class="row show-large">
-                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
+                <div class="col-6 info too-much-text">
                     <div class="copy">
                         <p>Visual identity for the celebration of <u class="under"> Punch Magazine's </u> 13th birthday. Design, posters and videos 
                             developed around the photos taken of a tuna can.
                         </p>
                     </div>
+                    <div class="line"></div>
                 </div>
-                <!-- <div class="offset-1 col-4 container-fluid other-project">
-                    <div class="row">
-                        <div class="col-3 justify-content-end d-flex p-0">
-                            <a class="no-style" href="eter_ines_apenas.html"><</a>
-                        </div>
-                        <div class="col-6 d-flex justify-content-center">more projects</div>
-                        <div class="col-3 justify-content-start d-flex p-0">
-                            <a class="no-style" href="aniversario_atomico.html">></a>
-                        </div>
-                    </div>
-                </div> -->
-                <div class="line col-1"></div>
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
-                        <div class="project-carousel d-flex row px-0">
-                            <div class="slide px-3">
+                        <div class="project-carousel px-0">
+                            <div class="slide px-3 d-flex flex-column">
                                 <iframe width="100%" height="64.5%"
                                     src="https://www.youtube.com/embed/t8n3G_Tn-Rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                                 </iframe>
+                                <div class="pt-3 slide-description">
+                                    <p>Video teaser.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/cartaz_completo_13o_aniv.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Main poster.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/punch_aniv_dia_19_story.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Day 19 social story.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/punch_aniv_dia_20_post.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Day 20 social post.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/lata_punch_transparente.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Tuna can render (transparent).</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/lata_raw.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Tuna can photo (raw).</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -216,36 +220,57 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
+                <button class="read-about-btn-small d-flex justify-content-center align-items-center" id="readAboutBtnSmall">
+                    <u class="under">Read about</u>
+                </button>
+                <div class="col-10 col-md-8 d-flex flex-column priority info copy info-slider-small">
+                    <button class="close-info-btn-small d-flex justify-content-center align-items-center" id="closeInfoBtnSmall">X</button>
                     <div class="d-flex flex-column">
                         <p>Visual identity for the celebration of <u class="under"> Punch Magazine's </u> 13th birthday. Design, posters and videos 
                             developed around the photos taken of a tuna can.
                         </p>
                     </div>
                 </div>
-                <div class="hor-line"></div>
                 <div class="col-12 d-flex justify-content-center align-items-start subject mb-4">
                     <div class="container-fluid project-carousel-container">
-                        <div class="project-carousel d-flex row px-0">
-                            <div class="slide px-3">
+                        <div class="project-carousel d-flex justify-content-center row px-0">
+                            <div class="slide px-3 d-flex flex-column">
                                 <iframe width="100%" height="64.5%"
-                                src="https://www.youtube.com/embed/t8n3G_Tn-Rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                                </iframe>                            
+                                    src="https://www.youtube.com/embed/t8n3G_Tn-Rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                                </iframe>
+                                <div class="pt-3 slide-description">
+                                    <p>Video teaser.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/cartaz_completo_13o_aniv.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Main poster.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/punch_aniv_dia_19_story.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Day 19 social story.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/punch_aniv_dia_20_post.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Day 20 social post.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/lata_punch_transparente.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Tuna can render (transparent).</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/lata_raw.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Tuna can photo (raw).</p>
+                                </div>
                             </div>
                         </div>
                     </div>
