--- a/roterdao.html
+++ b/roterdao.html
@@ -146,9 +146,9 @@
         </div>
     </header>
     <main class="a-project red-element roterdao fade-in">
-        <div class="container-fluid">
+        <div class="container-fluid content-viewport">
             <div class="row show-large">
-                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
+                <div class="col-6 info too-much-text">
                     <div class="copy">
                         <p>Creation of new identity and graphic system, including a custom
                              typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
@@ -157,35 +157,43 @@
                             <a class="no-style ajuste" href="https://bonancargb.github.io/roterdao_arquivo/" target="_blank"><u class="under">Check website</u><img class="h-link" src="images/hyperlink.svg"></a>
                         </div>
                     </div>
+                    <div class="line"></div>
                 </div>
                 
-                <div class="line col-1"></div>
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
-                        <div class="project-carousel d-flex row px-0">
-                            <div class="slide px-3">
+                        <div class="project-carousel px-0">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_roterdao.svg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Logo reimagining.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_comparison.svg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Logo comparison.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/coaster_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Coaster.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/cover_agenda.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Agenda cover.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/lighter_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Lighter.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/story_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Story post.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/pin_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Pin.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/agenda_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Agenda.</p></div>
                             </div>
                         </div>
                     </div>
@@ -213,7 +221,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
+                <button class="read-about-btn-small d-flex justify-content-center align-items-center" id="readAboutBtnSmall">
+                    <u class="under">Read about</u>
+                </button>
+                <div class="col-10 col-md-8 d-flex flex-column priority info copy info-slider-small">
+                    <button class="close-info-btn-small d-flex justify-content-center align-items-center" id="closeInfoBtnSmall">X</button>
                     <div class="d-flex flex-column">
                         <p>Creation of new identity and graphic system, including a custom
                              typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
@@ -223,33 +235,40 @@
                         </div>
                     </div>
                 </div>
-                <div class="hor-line"></div>
                 <div class="col-12 d-flex justify-content-center align-items-start subject mb-4">
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex justify-content-center row px-0">
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_roterdao.svg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Logo reimagining.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_comparison.svg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Logo comparison.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/coaster_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Coaster.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/cover_agenda.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Agenda cover.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/lighter_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Lighter.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/story_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Story post.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/pin_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Pin.</p></div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide px-3 d-flex flex-column">
                                 <img src="images/agenda_roterdao.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description"><p>Agenda.</p></div>
                             </div>
                         </div>
                     </div>
