--- a/sel.html
+++ b/sel.html
@@ -146,9 +146,9 @@
         </div>
     </header>
     <main class="a-project red-element sel fade-in">
-        <div class="container-fluid">
+        <div class="container-fluid content-viewport">
             <div class="row show-large">
-                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
+                <div class="col-6 info too-much-text">
                     <div class="copy">
                         <p>An open ended approach to <u class="under">Sinais em Linha</u>'s identity, that reflects both its 
                             academic backbone and the innovative and expansive voice it will bring to the table with this new iteration.</p>
@@ -159,26 +159,12 @@
                         <p>The brand has been implemented already in social media, and the blog will follow suit soon. I'm currently working on its 
                             new website.
                         </p>
-                        <!-- <div>
-                            <a class="button-skin" href="https://bonancargb.github.io/roterdao_arquivo/"><u class="under">Check website</u></a>
-                        </div> -->
                     </div>
+                    <div class="line"></div>
                 </div>
-                <!-- <div class="offset-1 col-4 container-fluid other-project">
-                    <div class="row">
-                        <div class="col-3 justify-content-end d-flex p-0">
-                            <a class="no-style" href="aniversario_atomico.html"><</a>
-                        </div>
-                        <div class="col-6 d-flex justify-content-center">more projects</div>
-                        <div class="col-3 justify-content-start d-flex p-0">
-                            <a class="no-style" href="ineur.html">></a>
-                        </div>
-                    </div>
-                </div> -->
-                <div class="line col-1"></div>
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
-                        <div class="project-carousel d-flex row px-0">
+                        <div class="project-carousel px-0">
                             <div class="slide px-3 d-flex flex-column">
                                 <iframe width="100%" height="64.5%"
                                 src="https://youtube.com/embed/I3OiJGZEWyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
@@ -193,24 +179,6 @@
                                     <p>Experiments with paper textures and logo segments.</p>
                                 </div>  
                             </div>
-                            <!-- <div class="slide px-3 d-flex flex-column">
-                                <img src="images/sel_sinais.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description">
-                                    <p>Experiments with paper textures and logo segments.</p>
-                                </div> 
-                            </div>
-                            <div class="slide px-3 d-flex flex-column">
-                                <img src="images/sel_em.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description">
-                                    <p>Experiments with paper textures and logo segments.</p>
-                                </div> 
-                            </div>
-                            <div class="slide px-3 d-flex flex-column">
-                                <img src="images/sel_linha.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description">
-                                    <p>Experiments with paper textures and logo segments.</p>
-                                </div> 
-                            </div> -->
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/insta_sel.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
@@ -238,10 +206,9 @@
                         </div>
                     </div>
                     <div class="dot-container" style="z-index: 10000;"></div>
-                </div>    
+                </div>
                 <div class="col-6 other-project justify-content-around d-flex">
                     <div class="p-0">
-                        <!-- <a class="no-style" href="aniversario_atomico.html"><</a> -->
                     </div>
                     <div class="justify-content-center">more projects</div>
                     <div class="p-0">
@@ -253,7 +220,6 @@
                 <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
-                            <!-- <a class="no-style ajuste fino" href="aniversario_atomico.html"><</a> -->
                         </div>
                         <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
@@ -261,7 +227,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
+                <button class="read-about-btn-small d-flex justify-content-center align-items-center" id="readAboutBtnSmall">
+                    <u class="under">Read about</u>
+                </button>
+                <div class="col-10 col-md-8 d-flex flex-column priority info copy info-slider-small">
+                    <button class="close-info-btn-small d-flex justify-content-center align-items-center" id="closeInfoBtnSmall">X</button>
                     <div class="d-flex flex-column">
                         <p>An open ended approach to <u class="under">Sinais em Linha</u>'s identity, that reflects both its 
                             academic backbone and the innovative and expansive voice it will bring to the table with this new iteration.</p>
@@ -272,12 +242,8 @@
                         <p>The brand has been implemented already in social media, and the blog will follow suit soon. I'm currently working on its 
                             new website.
                         </p>
-                        <!-- <div>
-                            <a class="button-skin" href="https://bonancargb.github.io/roterdao_arquivo/"><u class="under">Check website</u></a>
-                        </div> -->
                     </div>
                 </div>
-                <div class="hor-line"></div>
                 <div class="col-12 d-flex justify-content-center align-items-start subject mb-4">
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex justify-content-center row px-0">
@@ -295,24 +261,6 @@
                                     <p>Experiments with paper textures and logo segments.</p>
                                 </div>  
                             </div>
-                            <!-- <div class="slide px-3 d-flex flex-column">
-                                <img src="images/sel_sinais.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description">
-                                    <p>Experiments with paper textures and logo segments.</p>
-                                </div> 
-                            </div>
-                            <div class="slide px-3 d-flex flex-column">
-                                <img src="images/sel_em.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description">
-                                    <p>Experiments with paper textures and logo segments.</p>
-                                </div> 
-                            </div>
-                            <div class="slide px-3 d-flex flex-column">
-                                <img src="images/sel_linha.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description">
-                                    <p>Experiments with paper textures and logo segments.</p>
-                                </div> 
-                            </div> -->
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/250916_as_mulheres_post.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
