--- a/aniversario_atomico.html
+++ b/aniversario_atomico.html
@@ -146,35 +146,53 @@
         </div>
     </header>
     <main class="a-project blue-element aniversario_atomico fade-in">
-        <div class="container-fluid">
+        <div class="container-fluid content-viewport">
             <div class="row show-large">
-                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
+                <!-- left info column -->
+                <div class="col-6 info too-much-text">
                     <div class="copy">
                         <p>Visual identity for the celebration of <u class="under"> ATOMS MGMT's </u> first anniversary. The identity was
                             inspired in the recontextualization of the Periodic Table of Elements.
                         </p>
                     </div>
+                    <div class="line"></div>
                 </div>
-                <div class="line col-1"></div>
+
+                <!-- right carousel column -->
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
-                        <div class="project-carousel d-flex row px-0">
-                            <div class="slide px-3">
+                        <div class="project-carousel px-0">
+                            <!-- keep AA slides -->
+                            <div class="slide d-flex flex-column px-3">
                                 <img src="images/cartaz_a3_aniversario_atomico_FINAL.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Specific tour date iteration.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide d-flex flex-column px-3">
                                 <img src="images/bonanca_aniversario_atomico.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Specific tour date iteration.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide d-flex flex-column px-3">
                                 <img src="images/sogranora_aniversario_atomico.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Specific tour date iteration.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide d-flex flex-column px-3">
                                 <img src="images/passatempo_atoms_1.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Specific tour date iteration.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="dot-container" style="z-index: 10000;"></div> -->
-                </div>  
+                    <div class="dot-container" style="z-index: 10000;"></div>
+                </div>
+
+                <!-- other-project bar -->
                 <div class="col-6 other-project justify-content-around d-flex">
                     <div class="p-0">
                         <a class="no-style" href="aniversario_punch.html"><</a>
@@ -183,8 +201,10 @@
                     <div class="p-0">
                         <a class="no-style" href="roterdao.html">></a>
                     </div>
-                </div> 
+                </div>
             </div>
+
+            <!-- small layout -->
             <div class="row show-small">
                 <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
@@ -197,33 +217,54 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
+
+                <!-- Read about toggle + info slider -->
+                <button class="read-about-btn-small d-flex justify-content-center align-items-center" id="readAboutBtnSmall">
+                    <u class="under">Read about</u>
+                </button>
+
+                <div class="col-10 col-md-8 d-flex flex-column priority info copy info-slider-small">
+                    <button class="close-info-btn-small d-flex justify-content-center align-items-center" id="closeInfoBtnSmall">X</button>
                     <div class="d-flex flex-column">
                         <p>Visual identity for the celebration of <u class="under"> ATOMS MGMT's </u> first anniversary. The identity was
                             inspired in the recontextualization of the Periodic Table of Elements.
                         </p>
                     </div>
                 </div>
-                <div class="hor-line"></div>
+
+                <!-- small carousel -->
                 <div class="col-12 d-flex justify-content-center align-items-start subject mb-4">
                     <div class="container-fluid project-carousel-container">
-                        <div class="project-carousel d-flex row px-0">
-                            <div class="slide px-3">
+                        <div class="project-carousel d-flex justify-content-center row px-0">
+                            <!-- keep AA slides -->
+                            <div class="slide d-flex flex-column px-3">
                                 <img src="images/cartaz_a3_aniversario_atomico_FINAL.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Specific tour date iteration.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide d-flex flex-column px-3">
                                 <img src="images/bonanca_aniversario_atomico.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Specific tour date iteration.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide d-flex flex-column px-3">
                                 <img src="images/sogranora_aniversario_atomico.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Specific tour date iteration.</p>
+                                </div>
                             </div>
-                            <div class="slide px-3">
+                            <div class="slide d-flex flex-column px-3">
                                 <img src="images/passatempo_atoms_1.png" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Specific tour date iteration.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="dot-container" style="z-index: 10000;"></div> -->
-                </div>    
+                    <div class="dot-container" style="z-index: 10000;"></div>
+                </div>
             </div>
         </div>
     </main>
